# codeinjector

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  codeinjector-config.cmake  coverage.sh  main.c  pyproject.toml  reject.sh  supported_ecus.c  supported_ecus.h
.github/: dependabot.yml
.github/workflows/: pr.yml  release.yml  requirements.txt
docs/superpowers/plans/: 2026-05-16-integration-tests-coverage.md  2026-05-17-rust-rewrite.md
docs/superpowers/specs/: 2026-05-16-integration-tests-coverage-design.md  2026-05-17-rust-rewrite-design.md
src/: datadesc.rs  ecu.rs  main.rs  patch.rs
tests/: .gitignore  conftest.py  elf_builder.py  fixtures_datadesc.py  fixtures_patch.py  test_data_descs.py  test_errors.py  test_patch_methods.py
