[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "codeinjector"
version = "0.1.0"
description = "Code injection tool generating EcuFlash XML fragments to patch ROM files"
requires-python = ">=3.8"

[tool.maturin]
# Binary-only crate: maturin detects [[bin]] in Cargo.toml and includes the binary
